unpackaged/main/default/objects/Account/fields/Angela_test__c.field-meta.xml
<CustomField>
    <fullName>Angela_test__c</fullName>
    <label>Angela_test</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>