unpackaged/main/default/objects/Account/fields/B_B__c.field-meta.xml
<CustomField>
    <fullName>B_B__c</fullName>
    <defaultValue>false</defaultValue>
    <label>B&amp;B</label>
    <type>Checkbox</type>
</CustomField>