unpackaged/main/default/objects/Account/fields/DeletingPicklistTest__c.field-meta.xml
<CustomField>
    <fullName>DeletingPicklistTest__c</fullName>
    <label>DeletingPicklistTest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nicole</fullName>
            </value>
            <value>
                <fullName>Chris</fullName>
            </value>
            <value>
                <fullName>Charlotte</fullName>
                <isActive>false</isActive>
                <label>Charlotte</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>