unpackaged/main/default/objects/Account/fields/Demo_10_13__c.field-meta.xml
<CustomField>
    <fullName>Demo_10_13__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do you like Salesforce?</description>
    <label>Demo 10:13</label>
    <type>Checkbox</type>
</CustomField>