unpackaged/main/default/objects/Account/fields/Demo_9_27__c.field-meta.xml
<CustomField>
    <fullName>Demo_9_27__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Are you watching this demo?</description>
    <label>Demo-9:27</label>
    <type>Checkbox</type>
</CustomField>