unpackaged/main/default/objects/Account/fields/DemoMay__c.field-meta.xml
<CustomField>
    <fullName>DemoMay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DemoMay</label>
    <type>Checkbox</type>
</CustomField>