unpackaged/main/default/objects/Account/fields/DestructiveGlobalTest__c.field-meta.xml
<CustomField>
    <fullName>DestructiveGlobalTest__c</fullName>
    <label>DestructiveGlobalTest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>VincenzoDelete</valueSetName>
    </valueSet>
</CustomField>