unpackaged/main/default/objects/Account/fields/Git_demo__c.field-meta.xml
<CustomField>
    <fullName>Git_demo__c</fullName>
    <description>Git demo CI for Jason</description>
    <label>Git demo</label>
    <precision>11</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>