unpackaged/main/default/objects/Account/fields/JuneDemo__c.field-meta.xml
<CustomField>
    <fullName>JuneDemo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Custom field permissions</description>
    <label>JuneDemo</label>
    <type>Checkbox</type>
</CustomField>