unpackaged/main/default/objects/Account/fields/Manit__c.field-meta.xml
<CustomField>
    <fullName>Manit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manit</label>
    <type>Checkbox</type>
</CustomField>