unpackaged/main/default/objects/Account/fields/SueTest__c.field-meta.xml
<CustomField>
    <fullName>SueTest__c</fullName>
    <label>SueTest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sheik2</valueSetName>
    </valueSet>
</CustomField>