unpackaged/main/default/objects/Account/recordTypes/Flores.recordType-meta.xml
<RecordType>
    <fullName>Flores</fullName>
    <active>true</active>
    <label>Flores</label>
</RecordType>