unpackaged/main/default/objects/Account/recordTypes/Olga2.recordType-meta.xml
<RecordType>
    <fullName>Olga2</fullName>
    <active>true</active>
    <label>Olga2</label>
</RecordType>