unpackaged/main/default/objects/Account/recordTypes/OlgaTest.recordType-meta.xml
<RecordType>
    <fullName>OlgaTest</fullName>
    <active>true</active>
    <description>To test active</description>
    <label>OlgaTest</label>
</RecordType>